CorreçÃo de ExemplarResponseDto, atributos foram removidos indevidamente